// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handles @async messages and sends them on end turn 1`] = `
[
  {
    "content": [
      {
        "text": "Tell me about TypeScript",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "TypeScript is a typed superset of JavaScript.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Also tell me about JavaScript",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`handles @async messages by queueing them and sending on next tool response 1`] = `
[
  {
    "content": [
      {
        "text": "Can you read my secret file?",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "I'll read your secret file.",
        "type": "text",
      },
      {
        "id": "secret-file-tool",
        "name": "get_file",
        "request": {
          "status": "ok",
          "value": {
            "id": "secret-file-tool",
            "input": {
              "filePath": ".secret",
            },
            "toolName": "get_file",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "id": "secret-file-tool",
        "result": {
          "status": "ok",
          "value": [
            {
              "text": "secret secrets are no fun
",
              "type": "text",
            },
          ],
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "This should be queued",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`node/chat/thread.spec.ts > aborts request when sending new message while waiting for response 1`] = `
[
  {
    "content": [
      {
        "text": "First message",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "Second message while first is pending",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second response that should be shown",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`node/chat/thread.spec.ts > aborts tool use when sending new message while tool is executing 1`] = `
[
  {
    "content": [
      {
        "text": "Run a slow command",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "I'll run a slow bash command for you.",
        "type": "text",
      },
      {
        "id": "slow-bash-command",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "slow-bash-command",
            "input": {
              "command": "sleep 5 && echo 'This should be aborted'",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "id": "slow-bash-command",
        "result": {
          "error": "The user aborted this command.",
          "status": "error",
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "Cancel that, run something else",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`node/chat/thread.spec.ts > forks a thread with multiple messages into a new thread > fork-tool-request-messages 1`] = `
[
  {
    "content": [
      {
        "text": "What is the capital of France?",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "What about Germany?",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Let me check if I can find some information about Germany in your system.",
        "type": "text",
      },
      {
        "id": "first-bash-tool",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "first-bash-tool",
            "input": {
              "command": "echo 'Information about Germany'",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "id": "first-bash-tool",
        "result": {
          "status": "ok",
          "value": [
            {
              "text": "stdout:
Information about Germany
exit code 0
",
              "type": "text",
            },
          ],
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Let me check for more details about European countries.",
        "type": "text",
      },
      {
        "id": "second-bash-tool",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "second-bash-tool",
            "input": {
              "command": "echo 'European countries information'",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "id": "second-bash-tool",
        "result": {
          "status": "ok",
          "value": [
            {
              "text": "stdout:
European countries information
exit code 0
",
              "type": "text",
            },
          ],
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "test bash tool",
        "type": "text",
      },
      {
        "id": "bash-tool",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "bash-tool",
            "input": {
              "command": "echo test",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "id": "bash-tool",
        "result": {
          "status": "ok",
          "value": [
            {
              "text": "stdout:
test
exit code 0
",
              "type": "text",
            },
          ],
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "My next prompt will be:
Tell me about Italy

Use the fork_thread tool to start a new thread for this prompt.

- Carefully analyze the prompt
- Identify key concepts, patterns, files and decisions that may be relevant
- Include higly relevant files as contextFiles
- Name less relevant files that may be useful in the summary, but leave them out of contextFiles.
- Summarize ONLY information that directly supports addressing the next prompt, especially previous user instructions and observations that cannot be directly observable in the codebase.
- Prefer including files in contextFiles to copying code from those files into the summary. Do not repeat anything in the summary that can be learned directly from contextFiles.

You must use the fork_thread tool immediately, with only the information you already have. Do not use any other tools.",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`node/chat/thread.spec.ts > forks a thread with multiple messages into a new thread > forked-thread-messages 1`] = `
[
  {
    "content": [
      {
        "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.",
        "type": "text",
      },
      {
        "text": "File \`poem2.txt\`",
        "type": "text",
      },
      {
        "text": "Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
",
        "type": "text",
      },
      {
        "text": "File \`poem.txt\`",
        "type": "text",
      },
      {
        "text": "Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
",
        "type": "text",
      },
      {
        "text": "# Previous thread summary:
We discussed European capitals (France: Paris, Germany: Berlin) and examined your project structure, which contains TypeScript files.
# The user would like you to address this prompt next:
",
        "type": "text",
      },
      {
        "text": "Tell me about Italy",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Italy's capital is Rome. It's known for its rich history, art, and cuisine.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;
